# OSLabs

./: .gitignore  README.md
CP/: CMakeLists.txt
CP/include/: game.h
CP/report/: report.tex
CP/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
CP/report/styles/: log-style.sty
CP/src/: client.cpp  game.cpp  server.cpp
Lab1/: guide.txt
Lab1/inc/: child.c  parent.c
Lab1/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab2/: Makefile  plot.py
Lab2/inc/: filter_worker.h  matrix_filters.h  matrix_utils.h  timer.h
Lab2/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab2/src/: filter_worker.c  main.c  matrix_filters.c  matrix_utils.c
Lab3/: Makefile
Lab3/inc/: ipc_shm.h  parser.h  signals.h
Lab3/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab3/src/: ipc_shm.c  main.c  parser.c  signals.c
Lab4/: Makefile
Lab4/inc/: contract.h
Lab4/report/: report.tex
Lab4/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab4/src/: lib1.c  lib2.c  main_dynamic.c  main_static.c
Lab5/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
